Fixed alignment.

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -183,7 +183,7 @@ p a {
 	padding: 30px 0 0;
 }
 
-.post-body-inner h1, h2, h3, h4, h5, h6 {
+.post-body-inner h1, h3, h4, h5, h6 {
 	text-align: center;
 	margin-bottom: 20px;
 }
